<resources>
    <string name="app_name">AndroidFastDevelop</string>
    <string name="welcome_text">热烈欢迎领导来我司指导工作</string>
    <string name="Waiting_hint">正在载入数据...</string>
    <string name="uploaded">已上传</string>
    <string name="have_message">有消息</string>
    <string name="not_have_message">无消息</string>
    <string name="title_statusbar_mode">标题栏与状态栏一体化</string>
    <string name="image_statusbar_mode">背景图与状态栏一体化</string>
    <string name="contact_name">联系人姓名</string>
    <string name="input_contact_name">请输入您的姓名</string>
    <string name="contact_phone">联系人电话</string>
    <string name="input_contact_phone">请输入您的电话号码</string>
    <string name="id_card_photo">身份证照片</string>
    <string name="submit">提交</string>
    <string name="server_error">服务器出了点小问题，请稍候再试！</string>

    <!--权限相关-->
    <string name="permission_denied_hint">我们需要一些您已经拒绝的权限，请同意授权，否则功能无法正常使用！</string>
    <string name="permission_denied_forever_hint">我们需要一些您已经拒绝的权限，请到设置页面手动授权，否则功能无法正常使用！</string>
    <string name="open_app_details_settings">open_app_details_settings</string>
    <string name="request_storage_permission_simple">request_storage_permission_simple</string>
    <string name="request_storage_permission">request_storage_permission</string>
    <string name="request_camera_permission">request_camera_permission</string>

    <!--滚轮控件demo相关-->
    <string name="select_title">选择标题</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="wheel_view_title">一个很长很长很长很长很长很长很长很长很长很长很长的标题</string>

    <!--RecyclerView批量操作 start-->
    <string name="recyclerview_batch_operation">RecyclerView批量操作</string>
    <string name="edit">编辑</string>
    <string name="already_select">已选择</string>
    <string name="delete">删除</string>
    <string name="all_selection">全选</string>
    <string name="cancel_all_selection">取消全选</string>
    <string name="hint">提示</string>
    <string name="batch_operation_delete_hint">删除后不可恢复，是否删除该条目？</string>
    <string name="batch_operation_delete_hint2">删除后不可恢复，是否删除这%1$s个条目？</string>
    <!--RecyclerView批量操作 end-->
</resources>
