<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openAppDetailsSettings"
        android:text="@string/open_app_details_settings"/>

    <Button
        android:layout_marginTop="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="requestStoragePermissionSimple"
        android:text="@string/request_storage_permission_simple"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:onClick="requestStoragePermission"
        android:text="@string/request_storage_permission"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:onClick="requestCameraPermission"
        android:text="@string/request_camera_permission"/>

</LinearLayout>
