<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_transparent00">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_white_cornors_8dp"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_5">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_7"
            android:drawablePadding="@dimen/dp_45"
            android:gravity="center"
            android:text="@string/hint"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16"/>

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:textColor="@color/color_1a1a1a"
            android:textSize="@dimen/sp_13"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/color_e0e0e0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/color_18abff"
                android:textSize="@dimen/sp_14"/>

            <View
                android:layout_width="@dimen/dp_0_5"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="center_vertical"
                android:background="@color/color_e0e0e0"/>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/color_18abff"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>